--- a/Iniciando no Front-end (Modulo 3)/03 - Página Sobre/Desafio 2-2/desafio2-2.html
+++ b/Iniciando no Front-end (Modulo 3)/03 - Página Sobre/Desafio 2-2/desafio2-2.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div class="links">
+            <a href="desafio2-2.html">Home</a>
             <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
             <a href="mailto:oi@rocketseat.com.br">E-Mail</a>
             <a href="tel:+5547992078767">Telefone</a>
