--- a/Iniciando no Front-end (Modulo 3)/03 - Página Sobre/Desafio 2-2/sobre.html
+++ b/Iniciando no Front-end (Modulo 3)/03 - Página Sobre/Desafio 2-2/sobre.html
@@ -8,8 +8,11 @@
 <body>
     <header>
         <div class="links">
-            <a href="/">Sobre</a>
-            <a href="/">Aulas</a>
+            <a href="desafio2-2.html">Home</a>
+            <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
+            <a href="mailto:oi@rocketseat.com.br">E-Mail</a>
+            <a href="tel:+5547992078767">Telefone</a>
+            <a href="sobre.html">Sobre</a>
         </div>
     </header>
     <div id="wrapper">
